--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,10 @@ p {
 
 .right-image {
   position: relative;
-  width: 1%;
-  height: 1%;
-  
+  width: 100%;
+  height: 100%;
+}
+#cost {
+  position: relative;
+  left: 20px;
 }
